<resources>
    <string name="app_name">Final Exam - Matthew Rosettis</string>

    <string name="location">Location</string>
    <string name="search">Search</string>

    <string name="title_activity_maps">Showing Map</string>
    <string name="action_settings">Settings</string>
    <string name="txtBikeShareId">Bike share ID:</string>
    <string name="txtName">Name:</string>
    <string name="txtAddress">Address:</string>
    <string name="txtLatitude">Latitude:</string>
    <string name="txtLongitude">Longitude:</string>
    <string name="txtNumBikes">Number of bikes:</string>
    <string name="txtSave">Save</string>
    <string name="txtShowMap">Show on Map</string>
    <string name="numLatitude">43.66207</string>
    <string name="numLongitude">-79.37617</string>
    <string name="testText">Test</string>
</resources>
